<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">AndStatus</string>
    <string name="account_settings_action">AndStatus account settings</string>
    <string name="account_settings_activity_title">Account</string>
    <string name="account_settings_summary">Sync frequency, notifications, etc.</string>
    <string name="settings_action">Settings</string>
    <string name="settings_activity_title">Settings</string>
    <string name="action_menu_overflow_description">More actions…</string>
    <string name="appwidget_configure_instructions">Customize AndStatus Widget message, shown in a case there is nothing new:</string>
    <string name="appwidget_message_formats_1">{0} message"</string>
    <string name="appwidget_message_formats_2">{0} messages"</string>
    <string name="appwidget_mention_formats_1">{0} mention"</string>
    <string name="appwidget_mention_formats_2">{0} mentions"</string>
    <string name="appwidget_directmessage_formats_1">{0} direct"</string>
    <string name="appwidget_directmessage_formats_2">{0} direct"</string>
    <string name="appwidget_nothingnew_default">Nothing new since:</string>
	<string name="appwidget_new_tweet_format">{0}</string>
	<string name="appwidget_new_message_format">{0}</string>
	<string name="appwidget_new_mention_format">{0}</string>
    <string name="appwidget_nodata">No data yet.</string>
	<string name="authentication_never">Didn\'t authenticate yet</string>
	<string name="authentication_successful">Authentication successful!</string>
    <string name="button_add">Add</string>
	<string name="button_add_origin">Add new system</string>
    <string name="button_backup">Backup</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_change_folder">Change folder</string>
    <string name="button_select_backup_file">Select backup file</string>
    <string name="button_create_message">Post</string>
    <string name="button_create_message_twitter">Tweet</string>
    <string name="button_delete">Delete</string>
    <string name="button_discard">Discard</string>
    <string name="button_hide">Hide</string>
    <string name="button_overflow">Overflow</string>
    <string name="button_restore">Restore</string>
    <string name="button_save">Save</string>
	<string name="button_send">Send</string>
    <string name="cannot_send_empty_message">Cannot send empty message.</string>
	<string name="category_title_preference_appearance">Appearance</string>
	<string name="category_title_preference_credentials">User Credentials</string>
	<string name="category_title_preference_information">Information</string>
	<string name="category_title_preference_notifications">Notifications</string>
	<string name="category_title_preference_origin">Microblogging system</string>
	<string name="category_title_preference_settings">Settings</string>
    <string name="combined_timeline_on">combined</string>
    <string name="combined_timeline_off_account">for</string>
    <string name="combined_timeline_off_origin">at</string>
    <string name="dialog_summary_acquiring_an_access_token">Please wait while AndStatus is exchanging an OAuth Request token for Access token</string>
	<string name="dialog_summary_acquiring_a_request_token">Please wait while AndStatus is acquiring a request token for OAuth</string>
	<string name="dialog_summary_authentication_failed">Please check your username and password.</string>
	<string name="dialog_title_preference_frequency">Updates are fetched every…</string>
    <string name="dialog_title_preference_password">Password</string>
    <string name="dialog_title_preference_username">Username</string>
	<string name="dialog_title_timeline_loading">Updating a Timeline…</string>
    <string name="label_backup_file">Backup file</string>
    <string name="label_host">Host</string>
    <string name="label_origin_name">Name of Microblogging system (unique and not changeable)</string>
    <string name="label_origin_type">Type of Microblogging system</string>
    <string name="options_menu_attach">Attach</string>
    <string name="options_menu_global_search">Global search</string>
	<string name="options_menu_reload">Reload</string>
	<string name="options_menu_search">Search</string>
	<string name="splash_button_learn_more">Learn More</string>
	<string name="splash_button_get_started">Get Started</string>
	<string name="splash_payoff_line">Low traffic social networking client with tree-like threaded conversations.
	    Supports GNU social (StatusNet), Twitter and Pump.io.\n
	    Open Source license.</string>
   	<string name="user_manual_page_1"><h1><b>AndStatus User Guide</b></h1>\n\n
        AndStatus is a low traffic social networking client with tree-like threaded conversations. 
        It supports multiple protocols, including GNU social (StatusNet), Twitter and Pump.io. 
        AndStatus combines your accounts from all networks into one Timeline 
        and allows you reading and posting even while you are offline.\n 
        Open Source License.\n   	    
        * Link to this guide is available in the menu&gt;Settings&gt;About AndStatus&gt;Learn More.\n
        * Change Log on the next page will allow you to see descriptions and links to discussions on
        all the features of AndStatus\n\n  
        <h2><b>1. Getting started</b></h2>\n\n
        Tap \"Get Started\" button below: screen to add new account will be opened.\n
        You may change default Microblogging system (\"Twitter\") to some other system
        (Twitter, pump.io and Quitter, LoadAverage and Vinilox as three examples of 
        the StatusNet-type (GNU social) system, are preconfigured).\n
        In a case your (StatusNet-type) system is not listed, open Options menu, select \"Settings - 
        Manage microblogging systems\" and \"Add new system\" before adding the new account.\n
        For Twitter you are allowed to press \"Add this account\" immediately. 
        For other systems you will be prompted to type your Username and Password before
        the \"Add this account\" gets enabled.\n
        After successful creation of the account please tap \"left arrow\" on an 
        \"Action Bar\" or \"Back\" button on your device. 
        This time Home time line will be opened 
        and messages for this account will start downloading from the Internet…\n 
        Congratulations! Read below what you can do further.\n\n
        And don\'t forget to add AndStatus widget to the Home screen: 
        the widget will inform you about new messages and may be used to launch AndStatus.\n\n
        <h2><b>2. AndStatus BASICS</b></h2>\n\n
        The first view of AndStatus (after at least one account has been added) contains the Home timeline.\n
        In order to perform an action on a message in the list you should <b>hold down</b>
        on it to get a context menu.\n
        You may <b>click</b> on a message to get more details on it or to see
        a conversation tree to which the message belongs.\n
        Tap the <b>Home</b> button on the \"Action bar\" to switch to the other views.\n\n
        <h2><b>3. SENDING AND REPLYING</b></h2>\n\n
        In order to update your status, tap the \"Post\" button (\"Tweet\" for Twitter),
        type in a text into the text area at the bottom of the screen and tap <b>Send</b>.\n
        In order to reply, <b>hold down</b> a message and select <b>Reply</b>,
        type in your reply at the bottom.\n
        To abort a reply, simply tap the \"Hide\" button to hide the text area.
	</string>
    <string name="user_manual_page_2">
        <h2><b>4. DIRECT MESSAGES</b></h2>\n\n
        Tap the <b>Home</b> (Timeline type) button 
        and select <b>Direct Messages</b> from the list.\n
        In order to <b>delete</b> your direct message (or your public message), 
        <b>hold down</b> on it and select <b>Delete</b>.\n\n
        New messages are fetched to timelines if you have turned on <b>Automatic sync</b>
        in Android Account and Sync settings for this Account. 
        In any case you may always get updates from the Internet
        manually using \"Reload\" command in the Options Menu.\n\n
        <h2><b>5. MENTIONS</b></h2>\n\n
        Tap <b>Home</b> and then select <b>Mentions</b>.\n
        Mentions will list every message that mentions your <b>@username</b>
        (or even mentions of all your AndStatus accounts for a \"combined\" timeline).\n\n
        <h2><b>6. (LOCAL) SEARCH</b></h2>\n\n
        Local search searches among messages already loaded from the Internet.
        Hence it is available even offline.\n
        1.  In order to find any word or phrase in a text of messages,
        click \"Menu\" to open the Options Menu and then <b>Search</b> 
        or you can click the dedicated <b>Search</b> button on your device.\n
        If you wish to show messages from a specific user, 
        please search for \"username\".\n
        To see mentions of a specific user, search for \"@username\".\n\n
        2. To search quickly for messages by a user 
        (an Author or a Sender of a selected message), select 
        \"Messages by UserName\" from the context menu of the message. This is actually
        a sort of Global Search (see below).\n\n
        <h2><b>7. GLOBAL SEARCH</b></h2>\n\n
        Global search function requests search results directly 
        from Microblogging System\'s servers. 
        This is why live Internet connection to the systems is required.
        First, you are presented with the results of the Local search. In parallel,
        AndStatus requests results from a Microblogging System of the selected Account
        (or from all Microblogging systems, if the Timeline is \"combined\").
        The search results being updated upon receiving responses from the servers.
        In a case of no connection 
        (i.e. no response from a server of a Microblogging System)
        you will see results of the Local Search only.\n
        Please note that pump.io system doesn\'t support Global search yet.\n
        1. Global search by a word or a phrase may be started 
        from the \"Public\" Timeline only.
        After switсhing to this timeline, 
        click \"Menu\" to open the Options Menu and then <b>Global search</b>.\n
        2. Another way to search globally for messages by an Author or a Sender
        of the selected message is to select 
        \"Messages by UserName\" from the context menu of this message.
    </string>
	<string name="summary_preference_frequency">Updates are fetched every {0}.</string>
    <string name="summary_preference_oauth_off">Basic authentication</string>
	<string name="summary_preference_oauth_on">OAuth (secure authentication) is on</string>
    <string name="summary_preference_origin_system">Tap here to select a Microblogging system</string>
    <string name="summary_preference_password">Your password in the Microblogging system</string>
    <string name="summary_preference_username">Your username in the Microblogging system</string>
	<string name="summary_preference_verify_credentials">This Account is verified and enabled. Tap Back (&lt;) to continue or tap here to verify the user\'s credentials again.</string>
    <string name="timeline_title_home">Home</string>
	<string name="title_preference_frequency">Sync frequency</string>
	<string name="title_preference_is_default_account">This is default account</string>
    <string name="title_preference_notifications_queue">Commands in the queue</string>
    <string name="title_preference_oauth">OAuth</string>
    <string name="title_preference_origin_system">{0}, type: {1}</string>
    <string name="title_preference_password">Password</string>
	<string name="title_preference_ssl">SSL</string>
	<string name="title_preference_username">Username</string>
    <string name="title_preference_verify_credentials">Reverify credentials</string>
</resources>