<?xml version="1.0" encoding="utf-8"?>
<!-- 
	Copyright (C) 2013 yvolk (Yuri Volkov), http://yurivolkov.com
	
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
	     http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
 -->

<!-- This is a real account settings screen -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="account_settings"
    android:summary="@string/account_settings_summary"
    android:title="@string/account_settings_action" >

    <Preference
        android:key="verify_credentials"
        android:persistent="false"
        android:summary="@string/summary_preference_verify_credentials"
        android:title="@string/title_preference_verify_credentials" />

    <PreferenceCategory android:title="@string/category_title_preference_origin" >
	    <Preference 
	        android:key="origin_name"
	        android:persistent="false"
	        android:summary="@string/summary_preference_origin_system"
	        android:title="@string/title_preference_origin_system"  />
	
	    <CheckBoxPreference
	        android:defaultValue="true"
	        android:key="oauth"
	        android:persistent="true"
	        android:summaryOff="@string/summary_preference_oauth_off"
	        android:summaryOn="@string/summary_preference_oauth_on"
	        android:title="@string/title_preference_oauth" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/category_title_preference_credentials" >
        <EditTextPreference
            android:dialogTitle="@string/dialog_title_preference_username"
            android:key="username_new"
            android:persistent="true"
            android:singleLine="true"
            android:summary="@string/summary_preference_username"
            android:title="@string/title_preference_username" />
        <EditTextPreference
            android:dialogTitle="@string/dialog_title_preference_password"
            android:key="password"
            android:persistent="true"
            android:password="true"
            android:singleLine="true"
            android:summary="@string/summary_preference_password"
            android:title="@string/title_preference_password" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_title_preference_settings" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="is_default_account"
            android:persistent="false"
            android:title="@string/title_preference_is_default_account" />
    </PreferenceCategory>
</PreferenceScreen>
