<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/category_title_preference_credentials">
		<EditTextPreference android:title="@string/title_preference_username"
			android:dialogTitle="@string/dialog_title_preference_username"
			android:summary="@string/summary_preference_username" android:key="twitter_username" />
		<EditTextPreference android:title="@string/title_preference_password"
			android:dialogTitle="@string/dialog_title_preference_password"
			android:summary="@string/summary_preference_password" android:key="twitter_password" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/category_title_preference_updates">
		<CheckBoxPreference android:key="automatic_updates"
			android:title="@string/title_preference_automatic_updates"
			android:disableDependentsState="false" android:summaryOff="@string/summary_preference_automatic_updates_off" android:summaryOn="@string/summary_preference_automatic_updates_on"></CheckBoxPreference>
		<ListPreference android:entryValues="@array/fetch_frequency_keys"
			android:entries="@array/fetch_frequency_values" android:summary="@string/summary_preference_frequency"
			android:dialogTitle="@string/dialog_title_preference_frequency"
			android:title="@string/title_preference_frequency" android:key="fetch_frequency" android:dependency="automatic_updates" android:defaultValue="180"></ListPreference>
	</PreferenceCategory>
</PreferenceScreen>
