<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:minEms="5"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/button_discard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/button_save"
            android:minEms="5"
            android:text="@string/button_discard" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/button_discard"
            android:minEms="5"
            android:text="@string/button_delete" />

    </RelativeLayout>

    <TextView
        android:id="@+id/label_origin_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_origin_type" />

    <Spinner
        android:id="@+id/origin_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/origin_system_entries"
        android:prompt="@string/label_origin_type" />

    <TextView
        android:id="@+id/label_origin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_origin_name" />

    <EditText
        android:id="@+id/origin_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_origin_name" >

    </EditText>

    <TextView
        android:id="@+id/label_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_host" />

    <EditText
        android:id="@+id/host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_host" />

    <CheckBox
        android:id="@+id/is_ssl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_preference_ssl" />

    <CheckBox
        android:id="@+id/allow_html"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_preference_enable_html_content" />

</LinearLayout>
