<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:id="@+id/actions" 
    android:orientation="vertical" 
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray">

    <Button android:id="@+id/timelineTypeButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
		android:text="@string/timeline_title_home"
        android:onClick="onTimelineTypeButtonClick" />

    <TextView android:id="@+id/selectedUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/timelineTypeButton"
        android:layout_centerVertical="true"
        android:textColor="@android:color/primary_text_dark"
        android:visibility="gone" />
    
    <ToggleButton 
        android:id="@+id/combinedTimelineToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/selectedUserText"
        android:layout_centerVertical="true"
        android:textOn="@string/combined_timeline_on"
        android:textOff="@string/combined_timeline_off"
        android:onClick="onCombinedTimelineToggle" />

    <Button android:id="@+id/selectAccountButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/combinedTimelineToggle"
        android:layout_centerVertical="true"
		android:text="@string/title_preference_username"/>

    <Button
        android:id="@+id/button_overflow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/button_overflow"
        android:visibility="visible" />
    
    <Button
	    android:id="@+id/createMessageButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/button_overflow"
	    android:layout_centerVertical="true"
	    android:text="@string/button_create_message"
	    android:visibility="visible" />
    
    <TextView android:id="@+id/custom_title_right_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="14sp" android:textStyle="normal"
        android:text="@string/dialog_title_timeline_loading" 
        android:layout_toRightOf="@+id/selectAccountButton"/>
</RelativeLayout>
