<?xml version="1.0" encoding="UTF-8"?>
<!-- 
    Copyright (c) 2014 yvolk (Yuri Volkov), http://yurivolkov.com
	Copyright (C) 2008 Torgny Bjers
	
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
	     http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/MAIN_MENU">
		<item android:title="@string/options_menu_reload" android:id="@+id/reload_menu_item"
			android:alphabeticShortcut="r" android:icon="@drawable/ic_menu_reload"></item>
		<item android:title="@string/options_menu_search" android:id="@+id/search_menu_id"
			android:icon="@drawable/ic_menu_search" android:alphabeticShortcut="s"></item>
        <item android:title="@string/options_menu_global_search" android:id="@+id/global_search_menu_id"
            android:icon="@drawable/ic_menu_global_search" android:alphabeticShortcut="g" android:visible="false" android:enabled="false"></item>
		<item android:title="@string/settings_action" android:id="@+id/preferences_menu_id"
			android:alphabeticShortcut="p" android:icon="@drawable/ic_menu_preferences"></item>
	</group>
</menu>
