<?xml version="1.0" encoding="utf-8"?>
<!-- 
    Copyright (c) 2014 yvolk (Yuri Volkov), http://yurivolkov.com
    
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    
         http://www.apache.org/licenses/LICENSE-2.0
    
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".backup.RestoreActivity" >

    <TextView
        android:id="@+id/label_backup_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/label_backup_file"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/backup_file"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/label_backup_file" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:minEms="5"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/button_select_backup_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/button_cancel"
            android:minEms="5"
            android:text="@string/button_select_backup_file" />

        <Button
            android:id="@+id/button_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/button_select_backup_file"
            android:minEms="5"
            android:text="@string/button_restore" />

    </RelativeLayout>
    
    <TextView
        android:id="@+id/progress_log"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp" />
    
</LinearLayout>